--- a/pages/Postagens/postagens.css
+++ b/pages/Postagens/postagens.css
@@ -7,7 +7,6 @@ body {
     background-image: url("./../../image/FUNDO.png");
 }
 
-
 nav {
     position: fixed;
     top: 0;
@@ -57,6 +56,7 @@ nav {
 
 .itens:hover {
     background: rgba(230, 8, 210, 1);
+
 }
 
 #logo {
@@ -69,11 +69,11 @@ nav {
 
 .card {
     margin-top: 70px;
+    width: 50%;
     margin-left: 25%;
     margin-bottom: 20px;
     background: rgba(255, 192, 203, 0.354);
     border-radius: 10px;
-    width: 50%;
     padding: 15px;
 }
 
@@ -81,7 +81,7 @@ nav {
     background: rgba(255, 192, 203, 0.493);
     border-radius: 10px;
     margin: 15px;
-    padding: 15px;
+    padding: 20px;
 }
 
 h2 {
@@ -92,19 +92,20 @@ h2 {
 }
 
 .subtitulo {
-    color: #686868;
-    font-size: 13px;
+    font-family: Arial;
     font-style: italic;
+    font-size: 13px;
+    color: #686868;
     padding-bottom: 20px;
 }
 
 .lista {
-    padding-bottom: 10px;
     padding-left: 15px;
     margin-left: 15px;
-    font-size: 15px;
     font-family: Arial;
+    font-size: 15px;
     color: #484848;
+    padding-bottom: 10px;
 }
 
 .textPost {
@@ -121,14 +122,13 @@ h2 {
 }
 
 .linkPost:hover {
-    background: linear-gradient(279deg, rgba(164, 0, 193, 1) 0%, rgba(244, 87, 255, 1) 100%);
+    background: linear-gradient(280deg, rgba(164, 0, 193, 1) 0%, rgba(244, 87, 255, 1) 100%);
     color: white;
     border-radius: 2px;
 }
 
-
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     display: flex;
     justify-content: center;
@@ -141,10 +141,7 @@ footer {
 .redes {
     height: 40px;
     width: 40px;
-}
-
-#iconesRedes {
-margin: 8px;
+    margin: 8px 2px;
 }
 
 .p1Footer {
@@ -154,6 +151,5 @@ margin: 8px;
 
 .p2Footer {
     font-size: 10px;
-
     color: white;
 }
