--- a/pages/Fotos/fotos.css
+++ b/pages/Fotos/fotos.css
@@ -50,7 +50,7 @@ nav {
     padding: 10px 0;
     border-bottom: 2px solid #222;
     text-decoration: none;
-    color: black;
+    color: white;
     font-family: Arial;
     text-transform: uppercase;
     font-size: 15px;
