Adicionando estilização de novas páginas

--- a/pages/styles/styles.css
+++ b/pages/styles/styles.css
@@ -14,6 +14,7 @@ nav {
     top: 0;
     background: rgb(87, 0, 128);
     width: 100%;
+    height: 50px;
 }
 
 #menuCheck {
@@ -35,6 +36,7 @@ nav {
 .menu {
     position: absolute;
     left: -250px;
+    top: 50px;
 }
 
 #menuCheck:checked~.menu {
@@ -61,11 +63,26 @@ nav {
 
 }
 
+.logar {
+    position: absolute;
+    top: 15px;
+    right: 1%;
+}
+
+.itens-logar {
+    color: #FFF;
+    align-items: center;
+    padding-right: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    font-family: 'Arial Narrow';
+}
+
 /* Logo */
 
 #logo {
     position: fixed;
-    top: 2px;
     left: 45%;
     width: 120px;
     height: 50px;
@@ -264,6 +281,7 @@ input {
     border-radius: 5px;
     margin: 2px 0 20px;
     width: 400px;
+    height: 30px;
     box-shadow: 2px 2px rgba(105, 103, 103, 0.902);
 }
 
@@ -315,4 +333,48 @@ iframe {
     margin-top: 20px;
     width: 400px;
     height: 220px;
+}
+
+/* Cadastro */
+#cadastro {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 125px;
+    left: 35%;
+    padding: 15px;
+    border-radius: 5px;
+    background: rgba(255, 192, 203, 0.354);
+}
+
+#txt-cadastro {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-family: 'Arial Narrow';
+    font-weight: bolder;
+    color: #655e5e;
+}
+
+/* Login */
+#login {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 160px;
+    left: 35%;
+    padding: 15px;
+    border-radius: 5px;
+    background: rgba(255, 192, 203, 0.354);
+}
+
+#txt-login {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-family: 'Arial Narrow';
+    font-weight: bolder;
+    color: #655e5e;
 }
