--- a/pages/styles/styles.css
+++ b/pages/styles/styles.css
@@ -222,7 +222,7 @@ h2 {
 }
 
 #cardFotos::-webkit-scrollbar {
-  
+
     background: #686868;
 }
 
@@ -285,11 +285,15 @@ input {
     display: block;
     background: rgba(211, 126, 211, 0.582);
     color: #FFF;
+    font-size: 15px;
+    font-family: 'Arial Narrow';
+    padding: 3px;
     border-radius: 5px;
     margin: 2px 0 20px;
     width: 400px;
     height: 30px;
-    box-shadow: 2px 2px rgba(105, 103, 103, 0.902);
+    border: 0 none;
+    outline: 0;
 }
 
 input:focus {
@@ -301,15 +305,20 @@ textarea {
     display: block;
     background: rgba(211, 126, 211, 0.582);
     color: #FFF;
+    font-family: 'Arial Narrow';
     border-radius: 5px;
     margin: 2px 0 20px;
     width: 400px;
-    box-shadow: 2px 2px rgba(105, 103, 103, 0.902);
+    padding: 3px;
+    font-size: 15px;
+    border: 0 none;
+    outline: 0;
 }
 
 textarea:focus {
     background: rgb(211, 126, 211);
     transition: all .2s;
+
 }
 
 .frase-obt {
@@ -499,4 +508,13 @@ iframe {
     font-size: 25px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.span {
+    display: none;
+    font-size: 13px;
+    font-family: 'Arial Narrow';
+    color: red;
+    margin-top: -20px;
+    margin-bottom: 20px;
 }
